--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.3+1
   path_provider: ^2.0.5
+  fl_chart: ^0.40.0
 
 
   # The following adds the Cupertino Icons font to your application.
