--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.0.5
   fl_chart: ^0.40.0
+  firebase_core: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
